--- a/index.html
+++ b/index.html
@@ -5,92 +5,55 @@
     <title>Time of Day</title>
     <meta name="robots" content="noindex,nofollow">
     <style>
-        * {padding:0; margin:0;}
-        html {background-color:#ccc;}
-        body {
-            font-family: Arial, Helvetica, sans-serif;
-            max-width:960px;
-            width:90%;
-            margin:auto;
-            padding:20px;
-            min-height:100%;
-        }
-        img.flexible {
-            float:right;
-            display:inline-block;
-            padding:20px;
-            max-width:300px;
-            width:33%;
-        }
-        p {margin:10px;}
-        h1,h2,h3,h4,h5,h6 {
-            font-weight:normal;
-            margin:10px;
-        }
-        h1.masthead {margin-top:0;}
-        footer {
-            text-align:center;
-            clear:both;
-        }
+		* {padding:0; margin:0;}
+		html {background-color:#ccc;}
+		body {
+			font-family: Arial, Helvetica, sans-serif;
+			max-width:960px; /* keeps from getting too large on wide screen */
+			width:90%; /* shrink to fit screen */
+			margin:auto; /* center in html element */
+			background-color:#fff;
+			padding:20px;
+			min-height:100%; /* keeps from getting too large on wide screen */
+			}
+		img.flexible {
+			float:right;
+			display:inline-block;
+			padding:20px;
+			max-width:300px; /* actual size of image */
+			width:33%; /* approximate size taken on screen in maximum view */
+		}
+		p {margin:10px;}
+		h1,h2,h3,h4,h5,h6{
+			font-weight:normal;
+			margin:10px;
+			}
+		h1.masthead {margin-top:0;}
+		footer {
+			text-align:center;
+			clear:both; /* ride below all items */
+		}
     </style>
 </head>
 <body>
-    <header>
-        <h1 class="masthead">Time of Day</h1>
-    </header>
+	<header>
+		<h1 class="masthead">Time of Day</h1>
+	</header>
     <main>
-        <header><h3>A JavaScript Project by YOUR NAME HERE</h3></header>
-        <p>Explain what your page does and how it works here!</p>
-        <img src="http://dummyimage.com/300x400" alt="Time of Day Image" class="flexible" id="timeImage">
-        <p id="timeMessage"></p>
-        <footer>
-            <p><small>&copy; 2022 - <span id="currentYear"></span> by YOUR NAME HERE, All Rights Reserved ~ 
-                <a id="html-checker" href="#" target="_blank">Check HTML</a> ~ 
-                <a id="css-checker" href="#" target="_blank">Check CSS</a></small>
-            </p>
-        </footer>
-    </main>
-    <script>
-        // Set dynamic copyright year
-        document.getElementById("currentYear").textContent = new Date().getFullYear();
-
-        // Function to set time of day specific content
-        function setTimeOfDay() {
-            const now = new Date();
-            const hour = now.getHours();
-            const body = document.body;
-            const timeImage = document.getElementById("timeImage");
-            const timeMessage = document.getElementById("timeMessage");
-
-            if (hour >= 5 && hour < 12) {
-                // Morning
-                body.style.backgroundColor = "#FFDD99"; // Light orange
-                timeImage.src = "morning.jpg"; // Replace with your morning image URL
-                timeMessage.textContent = "Good Morning!";
-            } else if (hour >= 12 && hour < 18) {
-                // Afternoon
-                body.style.backgroundColor = "#FFD700"; // Gold
-                timeImage.src = "afternoon.jpg"; // Replace with your afternoon image URL
-                timeMessage.textContent = "Good Afternoon!";
-            } else if (hour >= 18 && hour < 23) {
-                // Evening
-                body.style.backgroundColor = "#FF4500"; // Orange red
-                timeImage.src = "evening.jpg"; // Replace with your evening image URL
-                timeMessage.textContent = "Good Evening!";
-            } else {
-                // Night
-                body.style.backgroundColor = "#2F4F4F"; // Dark slate gray
-                timeImage.src = "night.jpg"; // Replace with your night image URL
-                timeMessage.textContent = "Good Night!";
-            }
-        }
-
-        // Set the correct time of day content when the page loads
-        window.onload = setTimeOfDay;
-
-        // Set the HTML and CSS checkers
-        document.getElementById("html-checker").setAttribute("href", "https://validator.w3.org/nu/?doc=" + location.href);
-        document.getElementById("css-checker").setAttribute("href", "https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
-    </script>
+	 <header><h3>A JavaScript Project by YOUR NAME HERE</h3></header>
+	    <p>Explain what your page does and how it works here!</p>
+	  <img src="http://dummyimage.com/300x400" alt="Time of Day Image" class="flexible">
+     <footer>
+      <p><small>&copy; 2022 by 
+          YOUR NAME HERE, All Rights Reserved ~ 
+          <a id="html-checker" href="#" target="_blank">Check HTML</a> ~ 
+          <a id="css-checker" href="#" target="_blank">Check CSS</a></small>
+     </p>
+    </footer>
+  </main>
+ <script>
+    document.getElementById("html-checker").setAttribute("href","https://validator.w3.org/nu/?doc=" + location.href);
+    document.getElementById("css-checker").setAttribute("href","https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);  
+ </script>
 </body>
 </html>
