--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <h3>A JavaScript Project by Salim Noori</h3>
         </header>
         <main>
-            <p>Explain what your page does and how it works here!</p>
+            <p>I have created this page with four pictures where the picture will change based on the hour of the day to morning, afternoon, evening and night.</p>
         </main>
     </div>
     <img src="" alt="Time of Day Image" class="flexible" id="time-image">
